# r_dns-amplifier

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  dns-bash.sh
src/: amplifier.rs
