[package]
name = "r_dns-amplifier"
version = "0.1.0"
authors = ["David Stromberger <Davidstromberger99@gmx.de>"]
edition = "2021"

[[bin]]
name = "r_dns-amplifier"
path = "src/amplifier.rs"

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking"] }
tokio = { version = "1.27.0", features = ["full"] }
clap = { version = "4.2.1", features = ["derive"] }
rand = "0.8.5"
pnet = "0.33.0"
libc = "0.2.141"
