[package]
name = "r_dns-amplifier"
version = "2.6.1"
authors = ["David Stromberger <cavoq@proton.me>"]
edition = "2021"

[[bin]]
name = "r_dns-amplifier"
path = "src/amplifier.rs"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"
pnet = "0.35.0"
libc = "0.2.167"
